frontend/scss/organisms/_o-article.scss
.o-article {
  @include float-clear;
  position: relative;

  @include breakpoint('xsmall') {
    display: flex;
    flex-flow: column nowrap;
  }

  @include breakpoint('large+') {
    padding-bottom: 24px;
  }
}

.o-article .m-article-header {

  @include breakpoint('xsmall') {
    flex: 0 0 auto;
    width: 100%;
  }

  @include breakpoint('large+') {
    margin-bottom: 28px;

    &.m-article-header--gallery {
      margin-bottom: 0;
    }
  }
}

.o-article__primary-actions {
  position: relative;
  margin-top: 28px;
  padding-top: 8px;

  @include breakpoint('xsmall') {
    flex: 0 0 auto;
    width: 100%;
  }

  @include breakpoint('medium+') {
    margin-top: 28px;
  }

  @include breakpoint('large+') {
    float: left;
    width: colspan(13, large);
    margin-top: 0;
    margin-right: colspan(2, large);

    //&.o-article__primary-actions--inline-header {
    .m-article-header--gallery ~ & {
      margin-top: 40px;
    }
  }

  @include breakpoint('xlarge') {
    width: colspan(13, xlarge);
    margin-right: colspan(2, xlarge);
  }

  .m-article-header--default ~ & {
    @include breakpoint('medium') {
      float: left;
      width: colspan(38, medium);
    }
  }
}

  .m-article-header ~ .o-article__primary-actions::before {
    content: '';
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    height: 1px;
    background-color: $color__rules--primary;
  }

  .o-article__primary-actions > *:not(:nth-child(2)):not([class*=f-]):not(.o-collapsing-nav) {
    margin-top: 8px;

    @include breakpoint('large+') {
      margin-top: 52px;
    }
  }

  .o-article__primary-actions > *.f-secondary:not(:nth-child(2)) {
    @include tucked-margin-top($f-secondary, ('xsmall': 52));
  }

  .o-article__primary-actions > .m-article-actions:nth-child(2) {
    @include breakpoint('large+') {
      margin-top: 8px;
    }
  }

  .m-article-header--feature ~ .o-article__primary-actions,
  .m-article-header--hero ~ .o-article__primary-actions,
  .m-article-header--super-hero ~ .o-article__primary-actions {
    @include breakpoint('medium-') {
      margin-top: 0;

      &::before {
        content: none;
        display: none;
      }
    }
  }

  .o-article__primary-actions *.f-secondary:not(.m-author):not(.m-link-list) a {
    @include text-underline(1.02em, $color__rules--secondary);

    &:hover,
    &:focus:hover {
      @include text-underline(1.02em, $color__link--hover);
    }

    &:active:hover {
      @include text-underline(1.02em, $color__link--active);
    }
  }


.o-article__meta {
  position: relative;
  margin-top: 8px;

  @include breakpoint('xsmall') {
    flex: 0 0 auto;
    width: 100%;
  }

  @include breakpoint('medium+') {
    float: left;
    width: colspan(38, medium);
    margin-top: 20px;
  }

  @include breakpoint('large+') {
    display: none;
  }
}

  .o-article__meta .m-link-list:first-child {
    margin-top: 0;
  }


.o-article__secondary-actions {
  position: relative;
  margin-top: 16px;
  padding-top: 23px;
  border-top: 1px solid $color__rules--primary;

  @include breakpoint('xsmall') {
    flex: 0 0 auto;
    width: 100%;
  }

  @include breakpoint('small-') {
    &.o-article__secondary-actions--empty\@small- {
      margin-top: 0;
      padding-top: 0;
      border-top: 0 none;
    }
  }

  @include breakpoint('medium+') {
    float: right;
    width: colspan(18, medium);
    margin-top: 20px;
    margin-left: colspan(2, medium);
    padding-top: 0;
    border-top: 0 none;

    &.o-article__secondary-actions--inline-header {
      margin-top: 40px;
    }
  }

  @include breakpoint('medium') {
    .m-article-header--default ~ & {
      margin-top: 28px;
    }

    .m-article-header--default ~ .o-article__meta ~ & {
      margin-top: -40px;
    }
  }

  @include breakpoint('large+') {
    width: colspan(13, large);
    margin-top: 0;
    margin-left: colspan(2, large);

    &.o-article__secondary-actions--inline-header {
      margin-top: 40px;
    }
  }

  @include breakpoint('xlarge') {
    width: colspan(13, xlarge);
    margin-left: colspan(2, xlarge);
  }
}

  .o-article__secondary-actions > *:not(:nth-child(2)):not([class*=f-]) {
    margin-top: 8px;

    @include breakpoint('medium+') {
      margin-top: 52px;
    }
  }

  .o-article__secondary-actions > .m-article-actions:nth-child(2) {
    @include breakpoint('medium+') {
      margin-top: 8px;
    }
  }



.o-article__related {
  @include breakpoint('xsmall') {
    flex: 0 0 auto;
    width: 100%;
    margin-top: 28px;
    order: 1;
  }

  @include breakpoint('small+') {
    float: right;
    clear: right;
    width: colspan(23, small);
    margin-top: 48px;
    margin-bottom: colspan(3, small);
    margin-left: colspan(3, small);

    .o-article__inline-header ~ & {
      margin-top: -1px;
    }
  }

  @include breakpoint('medium+') {
    display: none;
  }
}



.o-article__inline-header,
.o-article__intro {
  position: relative;
  margin-top: 28px;
  padding-top: .02px;
  padding-bottom: .02px;

  @include breakpoint('xsmall') {
    flex: 0 0 auto;
    width: 100%;
  }

  @include breakpoint('medium+') {
    float: left;
    width: colspan(38, medium);
  }

  @include breakpoint('large+') {
    float: none;
    width: colspan(28, large);
    margin-top: 0;
    margin-left: colspan(15, large);
  }

  @include breakpoint('xlarge') {
    width: colspan(28, xlarge);
    margin-left: colspan(15, xlarge);
  }
}

.o-article__intro {
  @include breakpoint('large+') {
    padding-top: 11px;
    border-top: 1px solid $color__rules--primary;
  }
}

.o-article__inline-header {
  position: relative;
  padding-top: .02px;
  padding-bottom: 28px;

  @include breakpoint('small') {
    padding-right: colspan(10,small);
  }

  @include breakpoint('medium+') {
    margin-top: 40px;
    //margin-bottom: 12px;
  }
}

.o-article__inline-header .title.f-headline-editorial+.f-secondary {
  margin-top: 25px;
}

.o-article__inline-header .o-article__inline-header-display {
  margin-top: 25px;
}

.o-article__inline-header::before,
.o-article__inline-header::after {
  position: absolute;
  left: 0;
  right: 0;
  height: 1px;
  background-color: $color__rules--primary;
}

.m-article-header ~ .o-article__inline-header::before {
  content: '';
  top: 0;
}

.o-article__inline-header::after {
  content: '';
  bottom: 0;
}

.o-article__inline-header .f-headline-editorial:first-child {
  @include tucked-margin-top($f-headline-editorial, ('xsmall': 36, 'small+': 40, 'medium+': 48));
}

.o-article__inline-header .f-secondary {
  color: $color__text--secondary;
}

.o-article__inline-header .f-headline-editorial + .f-secondary {
  @include tucked-margin-top($f-secondary, ('xsmall': 68, 'medium+': 80));
}

.o-article__intro .f-deck:first-child {
  @include tucked-align-top($f-deck);
}



.o-article__body {
  @include float-clear;
  position: relative;
  margin-top: 28px;
  padding-top: 12px;

  .o-article__inline-header ~ & {
    margin-top: 8px;
  }

  .o-article__inline-header ~ &.o-article__body--no-description {
    margin-top: 0;
    padding-top: 0;
  }

  @include breakpoint('xsmall') {
    flex: 0 0 auto;
    width: 100%;
  }

  @include breakpoint('medium+') {
    padding-top: 0;

    .o-article__inline-header ~ & {
      margin-top: 12px;
    }

    .o-article__inline-header ~ &.o-article__body--no-description {
      margin-top: 0;
    }
  }

  @include breakpoint('large+') {
    float: left;
    width: colspan(43, large);
    margin-top: 0;
    margin-right: auto;
    margin-left: auto;

    .o-article__intro ~ & {
      margin-top: 60 - 24px;
    }
  }

  @include breakpoint('xlarge') {
    width: colspan(43, xlarge);
  }
}

  .o-article--video .o-article__body,
  .o-article__secondary-actions ~ .o-article__body {
    @include breakpoint('medium+') {
      float: left;
      width: colspan(38, medium);
    }

    @include breakpoint('large+') {
      float: none;
      width: colspan(28, large);
    }

    @include breakpoint('xlarge') {
      width: colspan(28, xlarge);
    }
  }

  .o-article__body:not(.o-article__intro ~ .o-article__body)::before {
    content: '';
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    height: 1px;
    background-color: $color__rules--primary;

    @include breakpoint('small+') {
      content: none;
      display: none;
    }
  }

.o-article__body--no-description.o-blocks > .deflist:first-child {
  margin-top: 0;

  .deflist__row:first-child::before {
    content: none;
    display: none;
  }
}
@include breakpoint('large+') {
  .o-article__body--no-description.o-blocks > .deflist.u-hide\@large\+:first-child + .deflist {
    margin-top: 0;

    .deflist__row:first-child::before {
      content: none;
      display: none;
    }
  }
}

.o-article__body-actions {
  margin-top: 64px;
  padding-top: 8px;
  border-top: 1px solid $color__rules--primary;
}

.o-article--generic-page {

  .o-article__primary-actions {
    padding-top: 0;

    @include breakpoint('medium-') {
      @include background-fill;
      margin-top: 0;
      background-color: $color__bg--primary;

      & ~ .o-article__secondary-actions {
        margin-top: 8px;
      }

      & ~ .o-article__body {
        margin-top: 20px;
      }

      &::before {
        height: auto;
        background-color: inherit;
      }
    }

    @include breakpoint('medium') {
      width: colspan(58, medium);

      & ~ .o-article__secondary-actions {
        margin-top: 28px;
      }

      & ~ .o-article__body {
        margin-top: 28px;
      }
    }

    /*
    @include breakpoint('large') {
      width: colspan(58, large);

      & ~ .o-article__secondary-actions {
        margin-top: 28px;
      }

      & ~ .o-article__body {
        margin-top: 28px;
      }
    }
    */
  }

  .o-article__primary-actions .m-link-list {
    margin-top: 0;
  }

  .o-article__secondary-actions {
    padding-top: 0;
    border-top: 0 none;
  }

  .o-article__secondary-actions::before {
    @include breakpoint('medium+') {
      content: '';
      position: absolute;
      left: 0;
      right: 0;
      top: 0;
      height: 1px;
      background-color: $color__rules--primary;
    }
  }

  .o-article__related {
    @include breakpoint('small') {
      margin-top: 28px;
    }
  }

  .m-article-header--generic:not(.m-article-header--generic-w-img) ~ .o-article__body {
    @include breakpoint('large+') {
      padding-top: 4px;

      &::before {
        content: '';
        position: absolute;
        left: 0;
        right: 0;
        top: 0;
        height: 1px;
        background-color: $color__rules--primary;
      }

      & > .m-links-bar:first-child,
      & > .hr:first-child,
      & > .m-article-actions:first-child,
      & > .o-blocks__block:first-child {
        margin-top: -4px;
      }
    }
  }
}

